fix: shrink section collapse chevron on mobile

--- a/client/src/styles/Workouts.module.scss
+++ b/client/src/styles/Workouts.module.scss
@@ -116,6 +116,16 @@
     height: 30px;
   }
 
+  @media (max-width: $mobile-width) {
+    width: 28px;
+    height: 28px;
+
+    img {
+      width: 18px;
+      height: 18px;
+    }
+  }
+
   &:hover {
     background-color: $primary-translucent;
   }
